force-app/main/default/objects/Portal_Profile_Feature__c/Portal_Profile_Feature__c.object-meta.xml
<CustomObject>
    <description
  >Component feature access assigned to a Portal User Profile.</description>
    <label>Portal Profile Feature</label>
    <nameField>
        <displayFormat>PPF-{0000}</displayFormat>
        <label>Profile Feature Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Profile Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>