force-app/main/default/objects/Portal_Profile_Feature__c/fields/Feature_Key__c.field-meta.xml
<CustomField>
    <fullName>Feature_Key__c</fullName>
    <label>Feature Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>