force-app/main/default/objects/Portal_Profile_Feature__c/fields/Feature_Label__c.field-meta.xml
<CustomField>
    <fullName>Feature_Label__c</fullName>
    <label>Feature Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>