force-app/main/default/objects/Portal_Profile_Feature__c/fields/Required_Objects__c.field-meta.xml
<CustomField>
    <fullName>Required_Objects__c</fullName>
    <label>Required Objects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>